# Motor-de-procesamiento-de-pedidos-de-alta-concurrencia-desarrollado-en-Rust-y-persistencia-en-SQLite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  script.js
.github/workflows/: apisec-scan.yml  ci.yml  codeql.yml  devskim.yml
e2e/: dashboard.spec.ts  playwright.config.ts
src/: logic.rs  main.rs  models.rs  schema.rs
src/bot/: mod.rs
src/db/: mod.rs
static/: index.html
templates/: dashboard.html
tests/: integration_test.rs
